Remove component and move logic into bundle

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ approx = "0.4"
 wasmer = "3.0.0-beta.2"
 wasmer-compiler-cranelift = "3.0.0-beta.2"
 wasmer-types = "3.0.0-beta.2"
+thiserror = "1.0.37"
