--- a/lib/ext-filter/Cargo.toml
+++ b/lib/ext-filter/Cargo.toml
@@ -4,15 +4,17 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
+bulwark-core = { path = "../core" }
+bulwark-wasm-host = { path = "../wasm-host" }
 base64 = "0.13.0"
 bytes = "1"
-clap = {version = "3.0.14", features = ["derive"]}
-envoy-control-plane = {version = "0.4.0", features = ["grpc"]}
+clap = { version = "3.0.14", features = ["derive"] }
+envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
 futures = "0.3"
 json = "0.12.4"
 prost = "0.9"
 prost-wkt = "=0.3.0"
-tokio = {version = "1" , features = ["rt-multi-thread", "macros"]}
+tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tonic = "0.6.2"
 wasmer = "3.0.0-beta"
 wasmer-compiler-cranelift = "3.0.0-beta"
