--- a/lib/wasm-host/Cargo.toml
+++ b/lib/wasm-host/Cargo.toml
@@ -6,5 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.66"
 bulwark-wasm-sdk = { path = "../wasm-sdk" }
 thiserror = "1.0.37"
+wasi-common = { git = "https://github.com/bytecodealliance/wasmtime" }
+wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = [
+    "component-model",
+] }
+wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime" }
+wit-bindgen-host-wasmtime-rust = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "1b2abcaf289e200dd92af644774de4f94e5cd31a" }
