--- a/crates/wasm-sdk/Cargo.toml
+++ b/crates/wasm-sdk/Cargo.toml
@@ -2,11 +2,10 @@
 name = "bulwark-wasm-sdk"
 version = "0.1.0"
 edition = "2021"
-build = "build.rs"
 
 [dependencies]
 log = "0.4"
-wit-bindgen-guest-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "1b2abcaf289e200dd92af644774de4f94e5cd31a" }
+wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-guest-rust
 
 [dev-dependencies]
 cfg-if = "1.0"
