--- a/crates/wasm-sdk/Cargo.toml
+++ b/crates/wasm-sdk/Cargo.toml
@@ -5,6 +5,8 @@ edition = "2021"
 
 [dependencies]
 http = "0.2"
+validator = { version = "0.12", features = ["derive"] }
+approx = "0.4"
 wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-guest-rust
 
 [dev-dependencies]
