--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -14,6 +14,7 @@ wasmtime = "0.39.1"
 wasmtime-wasi = "0.39.1"
 wasmtime-types = "0.39.1"
 wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-host-wasmtime-rust
+http = "0.2"
 
 [dev-dependencies]
 wasi-cap-std-sync = "0.39.1"
