--- a/crates/config/test/main.toml
+++ b/crates/config/test/main.toml
@@ -1,4 +1,4 @@
-[config]
+[service]
 port = 10002
 
 [[include]]
@@ -10,6 +10,11 @@ path = "bulwark-evil-bit.wasm"
 config = {}
 
 [[resource]]
-prefix = "/"
+route = "/"
+plugins = ["evil-bit", "starter-preset"]
+timeout = 25
+
+[[resource]]
+route = "/*params"
 plugins = ["evil-bit", "starter-preset"]
 timeout = 25
