--- a/crates/ext-filter/Cargo.toml
+++ b/crates/ext-filter/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bulwark-config = { path = "../config" }
 bulwark-wasm-host = { path = "../wasm-host" }
 bulwark-wasm-sdk = { path = "../wasm-sdk" }
 bytes = "1"
@@ -18,6 +19,8 @@ tonic = "0.6.2"
 http = "0.2"
 anyhow = "1.0.66"
 thiserror = "1.0.37"
+matchit = "0.7.0"
+sfv = "0.9.2"
 
 [build-dependencies]
 prost-wkt-build = "=0.3.0"
