--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,14 @@ toml = { version = "0.5.9", features = ["preserve_order"] }
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
 tonic = "0.6.2"
+tracing = "0.1.37"
+tracing-log = "0.1.3"
+tracing-bunyan-formatter = "0.3.4"
+tracing-opentelemetry = "0.18.0"
+tracing-forest = { version = "0.1.5", features = ["tokio"] }
+tracing-appender = "0.2.2"
+tracing-futures = { version = "0.2.5", features = ["tokio"] }
+tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 
 [build-dependencies]
 clap_mangen = "0.2.5"
