--- a/crates/ext-filter/Cargo.toml
+++ b/crates/ext-filter/Cargo.toml
@@ -21,6 +21,7 @@ anyhow = "1.0.66"
 thiserror = "1.0.37"
 matchit = "0.7.0"
 sfv = "0.9.2"
+tracing = "0.1.37"
 
 [build-dependencies]
 prost-wkt-build = "=0.3.0"
