--- a/crates/ext-filter/Cargo.toml
+++ b/crates/ext-filter/Cargo.toml
@@ -22,6 +22,8 @@ thiserror = "1.0.37"
 matchit = "0.7.0"
 sfv = "0.9.2"
 tracing = "0.1.37"
+r2d2_redis = "0.14.0"
+r2d2 = "0.8.10"
 
 [build-dependencies]
 prost-wkt-build = "=0.3.0"
