--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -15,6 +15,9 @@ wasmtime-wasi = "0.39.1"
 wasmtime-types = "0.39.1"
 wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-host-wasmtime-rust
 http = "0.2"
+redis = { version = "0.22.1", features = ["tokio-comp", "tokio-native-tls-comp", "cluster"] }
+r2d2 = "0.8.10"
+r2d2_redis = "0.14.0"
 
 [dev-dependencies]
 wasi-cap-std-sync = "0.39.1"
