--- a/crates/config/tests/main.toml
+++ b/crates/config/tests/main.toml
@@ -10,12 +10,16 @@ ref = "evil-bit"
 path = "bulwark-evil-bit.wasm"
 config = {}
 
+[[preset]]
+ref = "default"
+plugins = ["evil-bit", "starter-preset"]
+
 [[resource]]
 route = "/"
-plugins = ["evil-bit", "starter-preset"]
+plugins = ["default"]
 timeout = 25
 
 [[resource]]
 route = "/*params"
-plugins = ["evil-bit", "starter-preset"]
+plugins = ["default"]
 timeout = 25
