--- a/crates/ext-filter/Cargo.toml
+++ b/crates/ext-filter/Cargo.toml
@@ -22,7 +22,12 @@ thiserror = "1.0.37"
 matchit = "0.7.0"
 sfv = "0.9.2"
 tracing = "0.1.37"
-r2d2_redis = "0.14.0"
+redis = { version = "0.22.1", features = [
+    "tokio-comp",
+    "tokio-native-tls-comp",
+    "cluster",
+    "r2d2",
+] }
 r2d2 = "0.8.10"
 
 [build-dependencies]
