--- a/crates/wasm-sdk/Cargo.toml
+++ b/crates/wasm-sdk/Cargo.toml
@@ -8,6 +8,7 @@ http = "0.2"
 validator = { version = "0.12", features = ["derive"] }
 approx = "0.4"
 wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-guest-rust
+serde_json = "1.0.93"
 
 [dev-dependencies]
 cfg-if = "1.0"
