--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -25,6 +25,7 @@ r2d2 = "0.8.10"
 chrono = "0.4.23"
 serde = { version = "1.0.149", features = ["std", "serde_derive"] }
 serde_json = "1.0.93"
+reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
 
 [dev-dependencies]
 wasi-cap-std-sync = "0.39.1"
