Use threshold values for decisions instead of a magic constant

--- a/crates/wasm-sdk/Cargo.toml
+++ b/crates/wasm-sdk/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+thiserror = "1.0.37"
 http = "0.2"
 validator = { version = "0.12", features = ["derive"] }
 approx = "0.4"
