--- a/crates/config/tests/main.toml
+++ b/crates/config/tests/main.toml
@@ -3,7 +3,7 @@ port = 10002
 remote_state = "redis://127.0.0.1:6379"
 
 [thresholds]
-reject = 0.75
+restrict = 0.75
 
 [[include]]
 path = "include.toml"
