--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 [dependencies]
 anyhow = "1.0.66"
 bulwark-wasm-sdk = { path = "../wasm-sdk" }
+bulwark-config = { path = "../config" }
 thiserror = "1.0.37"
 wasi-common = "0.39.1"
 wasmtime = "0.39.1"
