--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -27,6 +27,7 @@ chrono = "0.4.23"
 serde = { version = "1.0.149", features = ["std", "serde_derive"] }
 serde_json = "1.0.93"
 reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
+url = "2.3.1"
 
 [dev-dependencies]
 wasi-cap-std-sync = "0.39.1"
