--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,7 @@ clap_complete = "4.0.6"
 # TODO: used for debug currently, remove later
 serde = { version = "1.0.149", features = ["std", "serde_derive"] }
 toml = { version = "0.5.9", features = ["preserve_order"] }
-tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
+tokio = { version = "1", features = ["rt-multi-thread", "macros", "tracing"] }
 envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
 tonic = "0.6.2"
 tracing = "0.1.37"
@@ -27,6 +27,10 @@ tracing-appender = "0.2.2"
 tracing-futures = { version = "0.2.5", features = ["tokio"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
 color-eyre = "0.6.2"
+tower-http = { version = "0.4.0", features = ["tokio", "tracing", "request-id", "trace"] }
+http = "0.2"
+hyper = { version = "0.14.25", features = ["server"] }
+tower = { version = "0.4.13", features = ["tokio", "tracing"] }
 
 [build-dependencies]
 clap_mangen = "0.2.5"
