--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,9 +21,8 @@ envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
 tonic = "0.6.2"
 tracing = "0.1.37"
 tracing-log = "0.1.3"
-tracing-bunyan-formatter = "0.3.4"
 tracing-opentelemetry = "0.18.0"
-tracing-forest = { version = "0.1.5", features = ["tokio"] }
+tracing-forest = { version = "0.1.5", features = ["tokio", "chrono", "uuid"] }
 tracing-appender = "0.2.2"
 tracing-futures = { version = "0.2.5", features = ["tokio"] }
 tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
@@ -32,8 +31,15 @@ http = "0.2"
 hyper = { version = "0.14.25", features = ["server"] }
 tower = { version = "0.4.13", features = ["tokio", "tracing"] }
 axum = { version = "0.6.12", features = ["http2"] }
-tower-http = { version = "0.4.0", features = ["tokio", "trace", "tracing", "normalize-path"] }
+tower-http = { version = "0.4.0", features = [
+    "tokio",
+    "trace",
+    "tracing",
+    "normalize-path",
+] }
 tower-layer = "0.3.2"
+chrono = { version = "0.4.24", features = ["serde"] }
+quoted-string = "0.6.1"
 
 [build-dependencies]
 clap_mangen = "0.2.5"
