--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,6 +40,7 @@ tower-http = { version = "0.4.0", features = [
 tower-layer = "0.3.2"
 chrono = { version = "0.4.24", features = ["serde"] }
 quoted-string = "0.6.1"
+tracing-core = "0.1.30"
 
 [build-dependencies]
 clap_mangen = "0.2.5"
