--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bulwark-wasm-sdk = { path = "../wasm-sdk" }
 serde = { version = "1.0.149", features = ["std", "serde_derive"] }
 serde_json = "1.0.93"
 toml = { version = "0.5.9", features = ["preserve_order"] }
