Split Decision out into its own reusable crate

--- a/crates/decision/Cargo.toml
+++ b/crates/decision/Cargo.toml
@@ -1,16 +1,12 @@
 [package]
-name = "bulwark-wasm-sdk"
+name = "bulwark-decision"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bulwark-decision = { path = "../decision" }
 thiserror = "1.0.37"
-http = "0.2"
 validator = { version = "0.12", features = ["derive"] }
 approx = "0.4"
-wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-guest-rust
-serde_json = "1.0.93"
 
 [dev-dependencies]
 cfg-if = "1.0"
