--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bulwark-ext-filter = { path = "crates/ext-filter" }
+bulwark-ext-processor = { path = "crates/ext-processor" }
 bulwark-config = { path = "crates/config" }
 anyhow = "1.0.66"
 thiserror = "1.0.37"
@@ -48,7 +48,7 @@ clap_mangen = "0.2.5"
 [workspace]
 members = [
     "crates/config",
-    "crates/ext-filter",
+    "crates/ext-processor",
     "crates/wasm-host",
     "crates/wasm-sdk",
     "crates/decision",
