Upgrade clippy warnings to errors

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,7 @@ jobs:
         uses: swatinem/rust-cache@v2
 
       - name: Run clippy
-        run: cargo clippy --no-deps --workspace --all-targets
+        run: cargo clippy --no-deps --workspace --all-targets -- --deny warnings
 
   test:
     strategy:
