--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,8 @@ categories = ["wasm"]
 maintenance = { status = "experimental" }
 
 [dependencies]
-bulwark-ext-processor = { path = "crates/ext-processor" }
-bulwark-config = { path = "crates/config" }
+bulwark-ext-processor = { path = "crates/ext-processor", version = "0.1.0" }
+bulwark-config = { path = "crates/config", version = "0.1.0" }
 thiserror = "1.0.37"
 clap = { version = "4.0.29", features = ["derive"] }
 clap_complete = "4.0.6"
