--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -13,7 +13,7 @@ categories = ["wasm"]
 maintenance = { status = "experimental" }
 
 [dependencies]
-bulwark-decision = { path = "../decision" }
+bulwark-decision = { path = "../decision", version = "0.1.0" }
 serde = { version = "1.0.149", features = ["std", "serde_derive"] }
 serde_json = "1.0.93"
 toml = { version = "0.5.9", features = ["preserve_order"] }
