--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -13,9 +13,9 @@ categories = ["wasm"]
 maintenance = { status = "experimental" }
 
 [dependencies]
-bulwark-config = { path = "../config" }
-bulwark-wasm-host = { path = "../wasm-host" }
-bulwark-wasm-sdk = { path = "../wasm-sdk" }
+bulwark-config = { path = "../config", version = "0.1.0" }
+bulwark-wasm-host = { path = "../wasm-host", version = "0.1.0" }
+bulwark-wasm-sdk = { path = "../wasm-sdk", version = "0.1.0" }
 bytes = "1"
 clap = { version = "3.0.14", features = ["derive"] }
 envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
