--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -6,7 +6,7 @@ license = "Apache-2.0 WITH LLVM-exception"
 homepage = "https://bulwark.security/"
 repository = "https://github.com/bulwark-security/bulwark"
 readme = "README.md"
-keywords = ["bulwark", "security", "fraud", "detection", "webassembly", "wasm"]
+keywords = ["bulwark", "configuration"]
 categories = ["wasm"]
 
 [badges]
