--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "bulwark-config"
+description = "Configuration for the Bulwark security engine."
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0 WITH LLVM-exception"
