--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "bulwark-ext-processor"
+description = "An Envoy external processor for the Bulwark security engine."
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0 WITH LLVM-exception"
