--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -1,5 +1,6 @@
 [package]
 name = "bulwark-wasm-host"
+description = "The WebAssembly host environment for the Bulwark security engine."
 version = "0.1.0"
 edition = "2021"
 license = "Apache-2.0 WITH LLVM-exception"
