--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -17,7 +17,11 @@ jobs:
           toolchain: stable
           components: rustfmt
 
-      - run: cargo fmt --check
+      - name: Run fmt
+        uses: actions-rs/cargo@v1
+        with:
+          command: fmt
+          args: --check
 
   clippy:
     runs-on: ubuntu-latest
@@ -37,7 +41,33 @@ jobs:
         uses: swatinem/rust-cache@v2
 
       - name: Run clippy
-        run: cargo clippy --no-deps --workspace --all-targets -- --deny warnings
+        uses: actions-rs/cargo@v1
+        with:
+          command: clippy
+          args: --no-deps --workspace --all-targets -- --deny warnings
+
+  package:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Install Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          components: clippy
+          override: true
+          target: wasm32-wasi
+
+      - name: Rust cache
+        uses: swatinem/rust-cache@v2
+
+      - name: Run bulwark package dry-run
+        uses: actions-rs/cargo@v1
+        with:
+          command: package
+          args: -p bulwark-cli -p bulwark-config -p bulwark-decision -p bulwark-ext-processor -p bulwark-wasm-host -p bulwark-wasm-sdk
 
   test:
     strategy:
