--- a/crates/config/Cargo.toml
+++ b/crates/config/Cargo.toml
@@ -23,3 +23,4 @@ serde_json = "1.0.93"
 thiserror = "1.0.37"
 toml = { version = "0.5.9", features = ["preserve_order"] }
 validator = { version = "0.12", features = ["derive"] }
+itertools = "0.10.5"
