--- a/crates/config/tests/main.toml
+++ b/crates/config/tests/main.toml
@@ -1,6 +1,6 @@
 [service]
 port = 10002
-remote_state = "redis://127.0.0.1:6379"
+remote_state_uri = "redis://127.0.0.1:6379"
 
 [thresholds]
 restrict = 0.75
