--- a/crates/decision/Cargo.toml
+++ b/crates/decision/Cargo.toml
@@ -17,6 +17,8 @@ maintenance = { status = "experimental" }
 thiserror = "1.0.37"
 validator = { version = "0.12", features = ["derive"] }
 approx = "0.4"
+strum = "0.24"
+strum_macros = "0.24"
 
 [dev-dependencies]
 cfg-if = "1.0"
