--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -22,6 +22,8 @@ clap = { version = "4.2.7", features = ["derive"] }
 envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
 futures = "0.3"
 json = "0.12.4"
+prost = "0.9"
+prost-wkt = "=0.3.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
 tonic = "0.6.2"
 http = "0.2"
@@ -37,3 +39,6 @@ redis = { version = "0.23.0", features = [
 ] }
 r2d2 = "0.8.10"
 forwarded-header-value = "0.1.1"
+
+[build-dependencies]
+prost-wkt-build = "=0.3.0"
