--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -41,4 +41,6 @@ r2d2 = "0.8.10"
 forwarded-header-value = "0.1.1"
 
 [build-dependencies]
+# This dependency declaration and the other prost dependencies above prevent `cargo update`
+# and other parts of cargo from upgrading to > 0.3.0, which would break the build.
 prost-wkt-build = "=0.3.0"
