--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -25,7 +25,7 @@ json = "0.12.4"
 prost = "0.9"
 prost-wkt = "=0.3.0"
 tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
-tonic = "0.6.2"
+tonic = "=0.6.2"
 http = "0.2"
 thiserror = "1.0.37"
 matchit = "0.7.0"
