--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -18,10 +18,12 @@ bulwark-wasm-sdk = { path = "../wasm-sdk", version = "0.1.0" }
 bulwark-config = { path = "../config", version = "0.1.0" }
 thiserror = "1.0.37"
 anyhow = "1"
-wasi-common = "8"
-wasmtime = { version = "8", features = ["component-model"] }
-wasmtime-wasi = "8"
-wasmtime-types = "8"
+wasi-common = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
+wasmtime = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0", features = [
+    "component-model",
+] }
+wasmtime-wasi = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
+wasmtime-types = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
 http = "0.2"
 redis = { version = "0.23.0", features = [
     "tokio-comp",
@@ -35,7 +37,10 @@ serde = { version = "1.0.149", features = ["std", "serde_derive"] }
 serde_json = "1.0.93"
 reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
 url = "2.3.1"
+futures = "0.3"
+async-trait = "0.1.68"
 
 [dev-dependencies]
-wasi-cap-std-sync = "8"
+wasi-cap-std-sync = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
 wat = "1.0.57"
+tokio-test = "*"
