--- a/crates/wasm-sdk/Cargo.toml
+++ b/crates/wasm-sdk/Cargo.toml
@@ -17,10 +17,11 @@ maintenance = { status = "experimental" }
 bulwark-decision = { path = "../decision", version = "0.1.0" }
 bulwark-wasm-sdk-macros = { path = "../wasm-sdk-macros", version = "0.1.0" }
 thiserror = "1.0.37"
+anyhow = "1"
 http = "0.2"
 validator = { version = "0.16", features = ["derive"] }
 approx = "0.4"
-wit-bindgen = "0.6.0"
+wit-bindgen = "0.7.0"
 serde_json = "1.0.93"
 proc-macro2 = "1.0.59"
 
