--- a/crates/wasm-sdk/examples/blank-slate/Cargo.toml
+++ b/crates/wasm-sdk/examples/blank-slate/Cargo.toml
@@ -16,6 +16,9 @@ maintenance = { status = "experimental" }
 wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "cb871cfa1ee460b51eb1d144b175b9aab9c50aba" } # 0.2.0, aka wit-bindgen-guest-rust
 bulwark-wasm-sdk = { path = "../..", version = "0.1.0" }
 
+[lib]
+crate-type = ["cdylib"]
+
 [profile.release]
 lto = true
 opt-level = 3
