--- a/crates/config/tests/overlapping_preset.toml
+++ b/crates/config/tests/overlapping_preset.toml
@@ -3,7 +3,7 @@ path = "include.toml"
 
 [[plugin]]
 ref = "evil_bit"
-path = "bulwark-evil-bit.wasm"
+path = "bulwark_evil_bit.wasm"
 
 [[preset]]
 ref = "overlap"
