--- a/crates/config/tests/circular_include.toml
+++ b/crates/config/tests/circular_include.toml
@@ -3,7 +3,7 @@ path = "circular_include.toml"
 
 [[plugin]]
 ref = "blank_slate"
-path = "bulwark-blank-slate.wasm"
+path = "bulwark_blank_slate.wasm"
 config = {}
 
 [[resource]]
