--- a/crates/config/tests/duplicate_mixed.toml
+++ b/crates/config/tests/duplicate_mixed.toml
@@ -1,11 +1,11 @@
 [[plugin]]
 ref = "blank_slate"
-path = "bulwark-blank-slate.wasm"
+path = "bulwark_blank_slate.wasm"
 config = {}
 
 [[plugin]]
 ref = "another_blank_slate"
-path = "bulwark-blank-slate.wasm"
+path = "bulwark_blank_slate.wasm"
 config = {}
 
 [[preset]]
