--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -18,12 +18,10 @@ bulwark-wasm-sdk = { path = "../wasm-sdk", version = "0.1.0" }
 bulwark-config = { path = "../config", version = "0.1.0" }
 thiserror = "1.0.37"
 anyhow = "1"
-wasi-common = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
-wasmtime = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0", features = [
-    "component-model",
-] }
-wasmtime-wasi = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
-wasmtime-types = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
+wasi-common = { version = "10" }
+wasmtime = { version = "10", features = ["component-model"] }
+wasmtime-wasi = { version = "10" }
+wasmtime-types = { version = "10" }
 http = "0.2"
 redis = { version = "0.23.0", features = [
     "tokio-comp",
@@ -41,7 +39,7 @@ futures = "0.3"
 async-trait = "0.1.68"
 
 [dev-dependencies]
-wasi-cap-std-sync = { version = "10", git = "https://github.com/bytecodealliance/wasmtime.git", branch = "release-10.0.0" }
+wasi-cap-std-sync = { version = "10" }
 wit-component = "0.11.0"
 wat = "1.0.57"
 tokio-test = "*"
