--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,6 +39,14 @@ jobs:
       - name: Run clippy
         run: cargo clippy --no-deps --workspace --all-targets -- --deny warnings
 
+  semver-checks:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+      - name: Check semver
+        uses: obi1kenobi/cargo-semver-checks-action@v2
+
   test:
     strategy:
       fail-fast: false
