Binary crates aren't supported for semver checks

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -53,6 +53,8 @@ jobs:
           target: wasm32-wasi
       - name: Check semver
         uses: obi1kenobi/cargo-semver-checks-action@v2
+        with:
+          exclude: bulwark-cli
 
   test:
     strategy:
