I think this gets it to use the existing toolchain

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -60,6 +60,7 @@ jobs:
         uses: obi1kenobi/cargo-semver-checks-action@v2
         with:
           exclude: bulwark-cli
+          rust-toolchain: manual
 
   test:
     strategy:
