--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -37,6 +37,7 @@ reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
 url = "2.3.1"
 futures = "0.3"
 async-trait = "0.1.68"
+validator = { version = "0.16" }
 
 [dev-dependencies]
 wasi-cap-std-sync = { version = "10" }
