--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -38,6 +38,7 @@ url = "2.3.1"
 futures = "0.3"
 async-trait = "0.1.68"
 validator = { version = "0.16" }
+metrics = "0.21.1"
 
 [dev-dependencies]
 wasi-cap-std-sync = { version = "11" }
