--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,6 +50,8 @@ tracing-core = "0.1.31"
 cargo_metadata = "0.15.4"
 wit-component = "0.11.0"
 metrics-exporter-prometheus = "0.12.1"
+metrics-exporter-statsd = "0.5.0"
+metrics = "0.21.1"
 
 [build-dependencies]
 clap_mangen = "0.2.5"
