--- a/crates/config/tests/main.toml
+++ b/crates/config/tests/main.toml
@@ -2,6 +2,10 @@
 port = 10002
 remote_state_uri = "redis://127.0.0.1:6379"
 
+[metrics]
+statsd_host = "10.0.0.2"
+statsd_prefix = "bulwark_"
+
 [thresholds]
 restrict = 0.75
 
