--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -36,6 +36,7 @@ thiserror = { workspace = true }
 validator = { workspace = true }
 
 async-trait = "0.1.68"
+bytes = "1.5.0"
 url = "2.3.1"
 
 [dev-dependencies]
