--- a/crates/decision/Cargo.toml
+++ b/crates/decision/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "bulwark-decision"
 description = "Decision-making under uncertainty for the Bulwark security engine."
-version = "0.3.0"
-edition = "2021"
+version.workspace = true
+edition.workspace = true
 license = "Apache-2.0 WITH LLVM-exception"
 homepage = "https://bulwark.security/"
 repository = "https://github.com/bulwark-security/bulwark"
