Redesign the WIT API - does not compile

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -39,6 +39,18 @@ jobs:
       - name: Run clippy
         run: cargo clippy --no-deps --workspace --all-targets -- --deny warnings
 
+  abi-up-to-date:
+    name: Check ABI files are up-to-date
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - name: ensure `./wit/deps` are in sync
+      run: |
+        curl -Lo 'wit-deps' https://github.com/bytecodealliance/wit-deps/releases/download/v0.3.5/wit-deps-x86_64-unknown-linux-musl
+        chmod +x ./wit-deps
+        ./wit-deps lock --check
+    - uses: WebAssembly/wit-abi-up-to-date@v16
+
   test:
     strategy:
       fail-fast: false
