--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -21,6 +21,7 @@ wasi-common = { workspace = true }
 wasmtime = { workspace = true }
 wasmtime-types = { workspace = true }
 wasmtime-wasi = { workspace = true }
+wasmtime-wasi-http = { workspace = true }
 
 anyhow = { workspace = true }
 chrono = { workspace = true }
