--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -24,6 +24,7 @@ wasmtime-wasi = { workspace = true }
 wasmtime-wasi-http = { workspace = true }
 
 anyhow = { workspace = true }
+bytes = { workspace = true }
 chrono = { workspace = true }
 futures = { workspace = true }
 http = { workspace = true }
@@ -37,7 +38,7 @@ thiserror = { workspace = true }
 validator = { workspace = true }
 
 async-trait = "0.1.68"
-bytes = "1.5.0"
+http-body-util = "0.1.0"
 url = "2.5.0"
 
 [dev-dependencies]
