--- a/crates/wasm-sdk/Cargo.toml
+++ b/crates/wasm-sdk/Cargo.toml
@@ -20,6 +20,7 @@ bulwark-wasm-sdk-macros = { workspace = true }
 wit-bindgen = { workspace = true }
 
 anyhow = { workspace = true }
+bytes = { workspace = true }
 http = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
