Renaming environment.wit to config.wit to avoid confusion w/ WASI's environment import

--- a/wit/deps.toml
+++ b/wit/deps.toml
@@ -1,2 +1,2 @@
-http = "https://github.com/WebAssembly/wasi-http/archive/v0.2.0-rc-2023-11-10.tar.gz"
-io = "https://github.com/WebAssembly/wasi-io/archive/v0.2.0-rc-2023-11-10.tar.gz"
+http = "https://github.com/WebAssembly/wasi-http/archive/v0.2.0.tar.gz"
+io = "https://github.com/WebAssembly/wasi-io/archive/v0.2.0.tar.gz"
