--- a/crates/wasm-sdk/examples/evil-bit/Cargo.toml
+++ b/crates/wasm-sdk/examples/evil-bit/Cargo.toml
@@ -13,8 +13,9 @@ publish = false
 maintenance = { status = "experimental" }
 
 [dependencies]
-bulwark-wasm-sdk = { path = "../..", version = "0.4.0" }
-wit-bindgen = "0.16.0"
+bulwark-wasm-sdk = { path = "../.." }
+
+[workspace]
 
 [lib]
 crate-type = ["cdylib"]
