Currently fails without explicit wit-bindgen dependency

--- a/crates/wasm-sdk/examples/blank-slate/Cargo.toml
+++ b/crates/wasm-sdk/examples/blank-slate/Cargo.toml
@@ -14,6 +14,7 @@ maintenance = { status = "experimental" }
 
 [dependencies]
 bulwark-wasm-sdk = { path = "../.." }
+wit-bindgen = "0.17.0"
 
 [workspace]
 
