Add client_ip implementation inside guest and plumb through proxy_hops config

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -104,6 +104,7 @@ approx = "0.5"
 bytes = "1.5"
 chrono = { version = "0.4.26", features = ["serde"] }
 envoy-control-plane = { version = "0.4.0", features = ["grpc"] }
+forwarded-header-value = "0.1.1"
 futures = "0.3"
 http = "1.0"
 metrics = "0.21.1"
