--- a/crates/ext-processor/Cargo.toml
+++ b/crates/ext-processor/Cargo.toml
@@ -19,6 +19,7 @@ bulwark-wasm-host = { workspace = true }
 bulwark-wasm-sdk = { workspace = true }
 
 envoy-control-plane = { workspace = true }
+forwarded-header-value = { workspace = true }
 futures = { workspace = true }
 http = { workspace = true }
 metrics = { workspace = true }
@@ -31,7 +32,6 @@ tonic = { workspace = true }
 tracing = { workspace = true }
 
 bytes = "1"
-forwarded-header-value = "0.1.1"
 json = "0.12.4"
 matchit = "0.7.0"
 prost = "0.12"
