--- a/crates/wasm-host/Cargo.toml
+++ b/crates/wasm-host/Cargo.toml
@@ -41,11 +41,11 @@ http-body-util = "0.1.0"
 url = "2.5.0"
 
 [dev-dependencies]
+bulwark-build = { workspace = true }
+
 wasi-cap-std-sync = { workspace = true }
 wat = { workspace = true }
 wit-component = { workspace = true }
-
-tokio-test = "0.4.2"
 
 [build-dependencies]
 reqwest = { workspace = true }
