WIT markdown files seem low-value for our use-case, removing

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,7 +8,7 @@ on:
 
 jobs:
   fmt:
-    name: rustfmt
+    name: Lint
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -20,6 +20,7 @@ jobs:
       - run: cargo fmt --check
 
   clippy:
+    name: Clippy
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -39,21 +40,8 @@ jobs:
       - name: Run clippy
         run: cargo clippy --no-deps --workspace --all-targets -- --deny warnings
 
-  abi-up-to-date:
-    name: Check ABI files are up-to-date
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: ensure `./wit/deps` are in sync
-      run: |
-        curl -Lo 'wit-deps' https://github.com/bytecodealliance/wit-deps/releases/download/v0.3.5/wit-deps-x86_64-unknown-linux-musl
-        chmod +x ./wit-deps
-        ./wit-deps lock --check
-    - uses: WebAssembly/wit-abi-up-to-date@v17
-      with:
-        worlds: 'http-detection platform'
-
   test:
+    name: Test suite
     strategy:
       fail-fast: false
       matrix:
