--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,7 @@ bulwark-wasm-host = { workspace = true }
 bulwark-wasm-sdk = { workspace = true }
 
 bytes = { workspace = true }
+bb8-redis = { workspace = true }
 
 tokio-test = "0.4.2"
 
