--- a/Cargo.toml
+++ b/Cargo.toml
@@ -58,8 +58,10 @@ tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
 bulwark-wasm-host = { workspace = true }
 bulwark-wasm-sdk = { workspace = true }
 
-bytes = { workspace = true }
+anyhow = { workspace = true }
 bb8-redis = { workspace = true }
+bytes = { workspace = true }
+reqwest = { workspace = true }
 
 tokio-test = "0.4.2"
 
@@ -130,7 +132,12 @@ reqwest = { version = "0.11.14", features = ["rustls-tls", "blocking"] }
 serde = { version = "1.0.149", features = ["std", "serde_derive"] }
 serde_json = "1.0.93"
 thiserror = "=1.0.43"
-tokio = { version = "1", features = ["rt-multi-thread", "macros", "tracing"] }
+tokio = { version = "1", features = [
+    "rt-multi-thread",
+    "macros",
+    "tracing",
+    "time",
+] }
 toml = { version = "0.8.6", features = ["preserve_order"] }
 tonic = "0.6.2"
 tracing = "0.1.37"
